add app to installed apps

--- a/templates/feud/index.html
+++ b/templates/feud/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html>
 	<head>
 		<title>
 			Feud
 		</title>
+		<script type="text/javascript" src="{% static "js/phaser.min.js" %}"></script>
 	</head>
 	<body>
 		Hello World
