--- a/templates/feud/index.html
+++ b/templates/feud/index.html
@@ -14,6 +14,8 @@
             }   
         </style>
         <link rel="stylesheet" type="text/css" href="{% static "css/feud.css" %}"/>
+        <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}"/>
+
     </head>
     <body>
         <input id='input' type='text'/>
