--- a/templates/feud/index.html
+++ b/templates/feud/index.html
@@ -129,8 +129,20 @@
 
                 var tween_input_box = this.add.tween(input_box);
                 tween_input_box.to({x: 350, y: 905}, 1000, Phaser.Easing.Bounce.Out, false, 600);
+
+                this.num_answers = 0;
+                const max_answers = 9;
+                var state = this;
                 tween_input_box.onComplete.add(function () {
-                    $('#input').show();
+                    var input = $('#input');
+                    input.show();
+                    input.keyup(function (event) {
+                        if (event.which === "\r".charCodeAt() && input.val().length) {
+                            state.game.add.text(104, 312 + state.num_answers * 56, input.val().toUpperCase(), {font: "50px Bazar"});
+                            ++state.num_answers;
+                            input.val("");
+                        }
+                    });
                 });
                 tween_input_box.start();
 
