--- a/templates/feud/index.html
+++ b/templates/feud/index.html
@@ -104,11 +104,17 @@
             },
 
             create: function() {
+                this.countdown = true;
+                this.round_time = 25000;
+                this.countdown_timer(3);
+            },
+
+            start_round: function() {
                 var x_middle = this.game.width/2;
                 var y_middle = this.game.length/2;
                 var banner = this.game.add.sprite(x_middle, 115, 'banner');
                 var alfred = this.game.add.sprite(x_middle + 500, 1000, 'alfred');
-                var input_box = this.game.add.sprite(-400, 905, 'input_box');
+                var input_box = this.game.add.sprite(-320, 905, 'input_box');
                 
                 // category title setup
                 var category_text = this.category.toUpperCase();
@@ -130,32 +136,59 @@
                 tween_category.start();
 
                 var tween_input_box = this.add.tween(input_box);
-                tween_input_box.to({x: 350, y: 905}, 1000, Phaser.Easing.Bounce.Out, false, 600);
+                tween_input_box.to({x: 350, y: 905}, 400, Phaser.Easing.Cubic.Out, false, 400);
                 tween_input_box.onComplete.add(function () {
                     $('#input').show();
+                    $('#input').focus();
                 });
                 tween_input_box.start();
 
                 // timer setup
                 this.x_clock_old = this.game.world.centerX - 80;
-                this.x_clock = this.game.world.centerX - 40;
+                this.x_clock = this.game.world.centerX - 30;
                 this.y_clock = this.game.world.centerY - 200;
                 this.text = "Hello World";
-                this.style = { font: "65px Arial", align: "center"};
+                this.style = { font: "65px Bazar", align: "center"};
                 this.time_field = this.game.add.text(this.x_clock, this.y_clock, this.text, this.style);
-                this.pre_timer();
                 this.start_timer();
             },
 
-            pre_timer: function() {
-                //
+            countdown_timer: function(second) {
+                var second = parseInt(second);
+                var countdown_style = { font: "200px Bazar"};
+                var state = this;
+                if (second == -1) {
+                    this.countdown = false;
+                    this.start_round();
+                    return;
+                }
+                var countdown_text = second.toString();
+                console.log(second);
+                var countdown_field = this.game.add.text(this.game.world.centerX, 0, countdown_text, countdown_style);
+
+                countdown_field.anchor.setTo(0.5, 0.5);
+                var tween_countdown = this.add.tween(countdown_field);
+                tween_countdown.to({x: this.game.world.centerX , y: this.game.world.centerY}, 1000, Phaser.Easing.Bounce.Out);
+                tween_countdown.start();
+                tween_countdown.onComplete.add(function() {
+                    state.game.world.remove(countdown_field);
+                    state.countdown_timer(second - 1);
+                });
+
+
+                // this.time_field = this.game.add.text(this.game.width/2, this.game.length/2, countdown_text, countdown_style);
+                // // this.game.time.events.add(Phaser.Timer.SECOND * 3, this.start_round, this);
+                // this.timer = game.time.create(false);
+                // this.timer.start(3000);
+
             },
 
+            // game timer
             start_timer: function() {
                 var y_clock_frame = this.game.world.centerY - 165;
                 this.game.stage.backgroundColor = '#e95e6d';
                 this.timer = game.time.create(false);
-                this.timer.loop(12000, this.round_end, this);
+                this.timer.loop(this.round_time, this.round_end, this);
                 this.timer.start();
                 
                 this.circles = this.game.add.graphics(this.game.world.centerX, y_clock_frame);
@@ -168,17 +201,18 @@
             },
 
             render: function() {
-                this.time_field.x = this.x_clock;
-                // game.debug.text("Time until event: " + this.timer.duration.toFixed(0), 32, 32);
-                // game.debug.text("Test: " + this.timer.duration / 1000 , 32, 64);
-                var time = parseInt(this.timer.duration / 1000);
-                
-                if (time < 10) {
-                    time = (this.timer.duration/ 1000).toFixed(1);
-                    this.time_field.x = this.x_clock - 8;
-                }
+                if (!this.countdown) {
+                    this.time_field.x = this.x_clock;
+                    
+                    var time = parseInt(this.timer.duration / 1000);
+                    
+                    if (time < 10) {
+                        time = (this.timer.duration/ 1000).toFixed(1);
+                        this.time_field.x = this.x_clock - 20;
+                    }
 
-                this.time_field.text = time;
+                    this.time_field.text = time;
+                }
             },
 
         }
