--- a/templates/feud/index.html
+++ b/templates/feud/index.html
@@ -215,7 +215,7 @@
             },
 
             round_end: function() {
-                this.total++;
+                this.game.state.start('category_state');
             },
 
             render: function() {
